contrast issues

--- a/chamber/larger.css
+++ b/chamber/larger.css
@@ -69,7 +69,7 @@
     }
 
     .social-icons i:hover {
-        color: var(--secondary-color);
+        color: #334758;
     }
 
     .nav-container .nav-links {
@@ -91,12 +91,13 @@
     }
 
     .nav-container .nav-links a {
-        color: #000;
+        color: #1a1f8e;
         font-weight: 600
     }
 
     .nav-container .nav-links a.active {
-        color: var(--primary-color)
+        color: #1a1f8e;
+        text-decoration: 2px #1a1f8e underline;
     }
 
     .nav-container span img {
