--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -319,8 +319,8 @@ footer {
 }
 
 .sec-one a:hover {
-    text-decoration: underline 2px black;
-    color: black;
+    text-decoration: underline 2px white;
+    color: #f0f0f0;
 }
 
 
